--- a/client/src/components/bar-graph/_styles.scss
+++ b/client/src/components/bar-graph/_styles.scss
@@ -29,7 +29,48 @@
   }
 
   .bar-graph-component-graph-container {
-    width: 85%;
-    height: 400px;
+    width: 95%;
+    height: 90%;
+    position: relative;
+
+    .bar-graph-loading-container {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba($app-background-color, 0.7);
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 9999;
+
+      .MuiCircularProgress-root {
+        color: #ffffff;
+      }
+    }
+
+    canvas {
+      height: 100% !important;
+    }
+  }
+}
+
+@media (max-width: 1050px) {
+  .bar-graph-component-container {
+    width: 49.5%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .bar-graph-component-container {
+    width: 100%;
+    height: 49.5%;
   }
 }
