--- a/client/src/components/filter/_styles.scss
+++ b/client/src/components/filter/_styles.scss
@@ -8,7 +8,7 @@
 
   .filter-component-inner-container {
     width: 100%;
-    height: 150px;
+    min-height: 150px;
     background-color: $card-background-color;
     box-shadow: $app-box-shadow;
     border: 0px solid $border-color;
@@ -55,14 +55,6 @@
       }
     }
 
-    // .filter-component-other-filters {
-    //   width: 70%;
-    //   height: 100%;
-    //   //height: 250px;
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: space-between;
-
     .filter-by-state-container {
       width: auto;
       height: auto;
@@ -100,6 +92,9 @@
     }
 
     .filter-by-topic-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       .filter-by-topic-header-container {
         width: 100%;
         display: flex;
@@ -132,7 +127,57 @@
       }
     }
   }
-  //}
+}
+
+@media (max-width: 900px) {
+  .filter-component-container {
+    .filter-component-inner-container {
+      flex-wrap: wrap;
+      align-items: center;
+
+      .filter-by-topic-container {
+        width: 100%;
+        margin-top: 15px;
+
+        .filter-by-topic-contents-container {
+          width: 300px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .filter-component-container {
+    .filter-component-inner-container {
+      flex-wrap: wrap;
+      align-items: center;
+
+      .filter-component-slider-container {
+        width: 90%;
+        margin-bottom: 15px;
+      }
+
+      .filter-by-state-container {
+        width: 100%;
+        .filter-by-state-contents-container {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+
+      .filter-by-topic-container {
+        width: 100%;
+        margin-top: 15px;
+
+        .filter-by-topic-contents-container {
+          width: 300px;
+        }
+      }
+    }
+  }
 }
 
 .MuiPaper-root,
