--- a/client/src/components/header/_styles.scss
+++ b/client/src/components/header/_styles.scss
@@ -8,7 +8,7 @@
   .header-component-inner-container {
     width: 100%;
 
-    .petitions-datat-summary-container {
+    .petitions-data-summary-container {
       width: 100%;
       height: 60px;
       display: flex;
@@ -23,6 +23,29 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
+
+        .data-summary-loading-container {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: rgba($app-background-color, 0.7);
+          position: absolute;
+          left: 0;
+          top: 0;
+          z-index: 9999;
+
+          .MuiCircularProgress-root {
+            color: #ffffff;
+          }
+        }
 
         .data-information {
           height: 100%;
@@ -58,6 +81,45 @@
 
           svg {
             fill: #1b2444;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .header-component-container {
+    .header-component-inner-container {
+      .petitions-data-summary-container {
+        .each-data-summary-container {
+          width: 32.5%;
+
+          .data-information {
+            padding: 0 5px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .header-component-container {
+    .header-component-inner-container {
+      .petitions-data-summary-container {
+        height: 200px;
+        //min-height: 100px;
+        //display: flex;
+        flex-direction: column;
+        .each-data-summary-container {
+          //width: 32.5%;
+          min-height: 60px;
+          width: 100%;
+          margin-bottom: 10px;
+
+          .data-information {
+            padding: 10px 15px;
           }
         }
       }
