--- a/client/src/components/map/_styles.scss
+++ b/client/src/components/map/_styles.scss
@@ -83,13 +83,27 @@
     hue-rotate(200deg) saturate(0.5) brightness(0.7);
 }
 
-@media (prefers-color-scheme: dark) {
-  .leaflet-tile {
-    filter: var(--leaflet-tile-filter, none);
-  }
+.leaflet-tile {
+  filter: var(--leaflet-tile-filter, none);
+}
 
-  .leaflet-container {
-    background: #303030;
+.leaflet-container {
+  background: #303030;
+}
+
+@media (max-width: 1050px) {
+  .map-component-container {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .map-component-container {
+    height: 600px;
+    .map-component-inner-container {
+      padding: 15px;
+    }
   }
 }
 
