--- a/client/src/components/_index.scss
+++ b/client/src/components/_index.scss
@@ -1,7 +1,9 @@
 @import "./map/styles";
+@import "./about/styles";
 @import "./header/styles";
 @import "./navbar/styles";
 @import "./filter/styles";
+@import "./update/styles";
 @import "./pie-chart/styles";
 @import "./bar-graph/styles";
 @import "./line-chart/styles";
