--- a/client/src/styles/_universal.scss
+++ b/client/src/styles/_universal.scss
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+$card-background-color: #1b2444;
+$app-background-color: #161d33;
+$green-background-color: #80fcff;
+$text-color: #768db7;
+$border-color: #525f89;
+$max-app-width: 1400px;
+$app-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 2px rgba(0, 0, 0, 0.24);
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -34,6 +43,21 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .updating-app-loader-container {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $app-background-color;
+
+    p {
+      color: $text-color;
+      margin-top: 25px;
+    }
   }
 
   .application-container {
@@ -71,15 +95,6 @@ body {
     }
   }
 }
-
-$card-background-color: #1b2444;
-$app-background-color: #161d33;
-$green-background-color: #80fcff;
-$text-color: #768db7;
-$border-color: #525f89;
-$max-app-width: 1400px;
-$app-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-  0px 1px 2px rgba(0, 0, 0, 0.24);
 
 @media (max-width: 1450px) {
   body {
