--- a/client/src/components/navbar/_styles.scss
+++ b/client/src/components/navbar/_styles.scss
@@ -14,6 +14,19 @@
     justify-content: space-between;
     //padding: 15px;
 
+    button {
+      background-color: $card-background-color;
+      color: $text-color;
+
+      svg {
+        margin-right: 10px;
+      }
+    }
+
+    button:hover {
+      background-color: #161d33;
+    }
+
     .navbar-logo-container {
       height: 70px;
       max-width: 400px;
