fix zoom using mouse wheel, add copyright footer, add title to line chart

--- a/client/src/components/_index.scss
+++ b/client/src/components/_index.scss
@@ -4,6 +4,7 @@
 @import "./navbar/styles";
 @import "./filter/styles";
 @import "./update/styles";
+@import "./footer/styles";
 @import "./pie-chart/styles";
 @import "./bar-graph/styles";
 @import "./line-chart/styles";
