--- a/client/src/styles/_universal.scss
+++ b/client/src/styles/_universal.scss
@@ -68,7 +68,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding-bottom: 3rem;
+    //padding-bottom: 3rem;
 
     .application-inner-container {
       width: 1400px;
