--- a/client/src/components/line-chart/_styles.scss
+++ b/client/src/components/line-chart/_styles.scss
@@ -5,9 +5,26 @@
   background-color: $card-background-color;
   box-shadow: $app-box-shadow;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
+
+  .line-chart-header-container {
+    width: 100%;
+    height: 50px;
+    color: $text-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+
+    h1 {
+      font-size: 1rem;
+      line-height: 1.5;
+      font-weight: 400;
+    }
+  }
 
   .line-chart-loading-container {
     position: absolute;
